kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helpdesk-app
  namespace: helpdesk
  labels:
    app: helpdesk-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helpdesk-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: helpdesk-app
    spec:
      serviceAccountName: helpdesk-sa
      containers:
        - name: helpdesk
          # החלף YOUR_DOCKERHUB_USERNAME בשם המשתמש שלך ב-DockerHub
          image: bhr100/helpdesk-pro:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          volumeMounts:
            - name: data-volume
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /login
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /login
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: helpdesk-data-pvc
